// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-198ohfb-StyledOl {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-rtqykd-ItemContainer {
  display: inline;
}

.cache-rtqykd-ItemContainer[aria-current='page'] {
  color: #727683;
}

.cache-rtqykd-ItemContainer:not(:last-child)::after {
  content: '›';
  margin: 0 8px;
}

.cache-1rk3jb4-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-1rk3jb4-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-1rk3jb4-StyledLink>* {
  pointer-events: none;
}

.cache-1rk3jb4-StyledLink:hover,
.cache-1rk3jb4-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #641cb3;
  text-decoration-color: #641cb3;
}

.cache-1rk3jb4-StyledLink:hover .e1afnb7a2,
.cache-1rk3jb4-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-1rk3jb4-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.cache-1rk3jb4-StyledLink:hover::after,
.cache-1rk3jb4-StyledLink:focus::after {
  background-color: #641cb3;
}

.cache-1rk3jb4-StyledLink:active {
  text-decoration-thickness: 2px;
}

<nav
    aria-label="breadcrumb"
  >
    <ol
      class="cache-198ohfb-StyledOl ej0p0s41"
    >
      <li
        aria-disabled="false"
        class="cache-rtqykd-ItemContainer ej0p0s40"
      >
        <a
          class="cache-1rk3jb4-StyledLink e1afnb7a0"
          data-variant="standalone"
          href="/step1"
        >
          Step 1
        </a>
      </li>
      <li
        aria-disabled="false"
        class="cache-rtqykd-ItemContainer ej0p0s40"
      >
        <a
          class="cache-1rk3jb4-StyledLink e1afnb7a0"
          data-variant="standalone"
          href="/step1/step2"
        >
          I'm a very long... long long step
        </a>
      </li>
      <li
        aria-current="page"
        aria-disabled="false"
        class="cache-rtqykd-ItemContainer ej0p0s40"
      >
        Step 3
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs renders correctly with invalid child 1`] = `
<DocumentFragment>
  .cache-198ohfb-StyledOl {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<nav
    aria-label="breadcrumb"
  >
    <ol
      class="cache-198ohfb-StyledOl ej0p0s41"
    >
      Invalid child
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs renders correctly with onClick 1`] = `
<DocumentFragment>
  .cache-198ohfb-StyledOl {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-rtqykd-ItemContainer {
  display: inline;
}

.cache-rtqykd-ItemContainer[aria-current='page'] {
  color: #727683;
}

.cache-rtqykd-ItemContainer:not(:last-child)::after {
  content: '›';
  margin: 0 8px;
}

.cache-1rk3jb4-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-1rk3jb4-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-1rk3jb4-StyledLink>* {
  pointer-events: none;
}

.cache-1rk3jb4-StyledLink:hover,
.cache-1rk3jb4-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #641cb3;
  text-decoration-color: #641cb3;
}

.cache-1rk3jb4-StyledLink:hover .e1afnb7a2,
.cache-1rk3jb4-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-1rk3jb4-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.cache-1rk3jb4-StyledLink:hover::after,
.cache-1rk3jb4-StyledLink:focus::after {
  background-color: #641cb3;
}

.cache-1rk3jb4-StyledLink:active {
  text-decoration-thickness: 2px;
}

.cache-1s3r535-ItemContainer {
  display: inline;
  cursor: pointer;
}

.cache-1s3r535-ItemContainer[aria-current='page'] {
  color: #727683;
}

.cache-1s3r535-ItemContainer:not(:last-child)::after {
  content: '›';
  margin: 0 8px;
}

.cache-1s3r535-ItemContainer[aria-disabled="true"] {
  pointer-events: none;
}

<nav
    aria-label="breadcrumb"
  >
    <ol
      class="cache-198ohfb-StyledOl ej0p0s41"
    >
      <li
        aria-disabled="false"
        class="cache-rtqykd-ItemContainer ej0p0s40"
      >
        <a
          class="cache-1rk3jb4-StyledLink e1afnb7a0"
          data-variant="standalone"
          href="/step1"
        >
          Step 1
        </a>
      </li>
      <li
        aria-disabled="false"
        class="cache-rtqykd-ItemContainer ej0p0s40"
      >
        <a
          class="cache-1rk3jb4-StyledLink e1afnb7a0"
          data-variant="standalone"
          href="/step1/step2"
        >
          I'm a very long... long long step
        </a>
      </li>
      <li
        aria-current="page"
        aria-disabled="false"
        class="cache-1s3r535-ItemContainer ej0p0s40"
      >
        Step 3
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs renders correctly with selected item 1`] = `
<DocumentFragment>
  .cache-198ohfb-StyledOl {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-rtqykd-ItemContainer {
  display: inline;
}

.cache-rtqykd-ItemContainer[aria-current='page'] {
  color: #727683;
}

.cache-rtqykd-ItemContainer:not(:last-child)::after {
  content: '›';
  margin: 0 8px;
}

.cache-1rk3jb4-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-1rk3jb4-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-1rk3jb4-StyledLink>* {
  pointer-events: none;
}

.cache-1rk3jb4-StyledLink:hover,
.cache-1rk3jb4-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #641cb3;
  text-decoration-color: #641cb3;
}

.cache-1rk3jb4-StyledLink:hover .e1afnb7a2,
.cache-1rk3jb4-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-1rk3jb4-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.cache-1rk3jb4-StyledLink:hover::after,
.cache-1rk3jb4-StyledLink:focus::after {
  background-color: #641cb3;
}

.cache-1rk3jb4-StyledLink:active {
  text-decoration-thickness: 2px;
}

<nav
    aria-label="breadcrumb"
  >
    <ol
      class="cache-198ohfb-StyledOl ej0p0s41"
    >
      <li
        aria-disabled="false"
        class="cache-rtqykd-ItemContainer ej0p0s40"
      >
        <a
          class="cache-1rk3jb4-StyledLink e1afnb7a0"
          data-variant="standalone"
          href="/step1"
        >
          Step 1
        </a>
      </li>
      <li
        aria-current="page"
        aria-disabled="false"
        class="cache-rtqykd-ItemContainer ej0p0s40"
      >
        <a
          class="cache-1rk3jb4-StyledLink e1afnb7a0"
          data-variant="standalone"
          href="/step1/step2"
        >
          I'm a very long... long long step
        </a>
      </li>
      <li
        aria-disabled="false"
        class="cache-rtqykd-ItemContainer ej0p0s40"
      >
        Step 3
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;
